# Q-Tetris

./: CMakeLists.txt  README.md
exe/: 2qasm.cpp  config.cpp  main.cpp  qft.cpp  swap.cpp  verify.cpp
include/: MCTS.h  QASMParser.h  base.h  basis.h  state.h
input/RevLib/: 32bit_adder.txt  bw_116.txt  callif_16_390.txt  callif_16_414.txt  cycle10_293.txt  ham15_298.txt  hwb5_300.txt  hwb7_15.txt  hwb8_64.txt  integer_adder.txt  mod5adder_66.txt  nestedif_16_394.txt  nestedif_16_466.txt  plus127mod8192_78.txt  plus63mod4096_79.txt  plus63mod8192_80.txt  rd73_312.txt  rd84_313.txt  simple_alu_16_468.txt  sym9_71.txt  varops_16_350.txt
input/im/: 16QBT_15CYC_TFL_0.qasm  16QBT_15CYC_TFL_1.qasm  2integer_adder.qasm  32bit_adder.qasm  3integer_adder.qasm  4gt13_92.qasm  4integer_adder.qasm  4mod5-v1_22.qasm  6integer_adder.qasm  adr4_197.qasm  alu-v0_27.qasm  bv_n16.qasm  bw_116.qasm  callif_16_462.qasm  callif_241.qasm  cm152a_212.qasm  cm42a_207.qasm  con1_216.qasm  cycle10_293.qasm  cycle10_2_110.qasm  dc1_220.qasm  decod24-v2_43.qasm  f2_232.qasm  ham15_298.qasm  hwb5_300.qasm  hwb5_53.qasm  hwb7_15.qasm  hwb8_64.qasm  ising_model_10.qasm  ising_model_13.qasm  ising_model_16.qasm  misex1_241.qasm  mod5adder_66.qasm  mod5mils_65.qasm  multiplier_n25.qasm  nestedif_16_418.qasm  nestedif_16_466.qasm  plus127mod8192_78.qasm  plus63mod4096_79.qasm  plus63mod8192_80.qasm  (+20 more)
lib/: CMakeLists.txt  MCTS.cpp  QASMParser.cpp  base.cpp  state.cpp
output/: readme.txt
output/debug/: HGA_4gt13_92.qasm  HGA_4gt13_92.qasm.txt  MCTS_4gt13_92.qasm  MCTS_4gt13_92.qasm.txt  debug.txt  (+1 more)
(+286 files in other folders)
